@@ -21,6 +21,19 @@
 </tr>
 </table>
 <p>
+2009-10-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/xwindow.c (MagickXMakeImage): Fix for CVE-2009-1882
+        "Integer overflow in the XMakeImage function".  The problem is
+        that the shared memory segment allocated may be smaller than the
+        image size requires due to integer overflow.  On some systems it
+        may be possible to crash GraphicsMagick (while displaying an image
+        file) but not likely to overwrite the heap since shared memory
+        segments are outside of the heap allocation.
+
+</UL>
+<p>
 2009-09-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
